--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -286,7 +286,7 @@
 #profile-picture{
   align-items: center;
   border: 2px solid #808080;
-  border-radius: 100%;
+  border-radius: 50%;
   display: flex;
   height: 168px;
   justify-content: center;
